<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro_email">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center">
        <TextView
            android:text="@string/Txt_registrarme"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:src="@drawable/registro"
            android:layout_width="80dp"
            android:layout_height="80dp"/>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    app:boxCornerRadiusBottomStart="9dp"
    app:boxCornerRadiusBottomEnd="9dp"
    app:boxCornerRadiusTopStart="9dp"
    app:boxCornerRadiusTopEnd="9dp">
    <EditText
        android:id="@+id/Et_Email"
     android:hint="@string/Et_Email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    
</com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomStart="9dp"
            app:boxCornerRadiusBottomEnd="9dp"
            app:boxCornerRadiusTopStart="9dp"
            app:boxCornerRadiusTopEnd="9dp"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/Et_Password"
                android:inputType="textPassword"
                android:hint="@string/Et_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomStart="9dp"
            app:boxCornerRadiusBottomEnd="9dp"
            app:boxCornerRadiusTopStart="9dp"
            app:boxCornerRadiusTopEnd="9dp"
            app:passwordToggleEnabled="true">
            <EditText
                android:inputType="textPassword"
                android:id="@+id/Et_rPassword"
                android:hint="@string/ET_R_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



        </com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.button.MaterialButton
    android:id="@+id/Btn_registrar"
    android:text="@string/Btn_Registrar"
    android:textAllCaps="true"
    android:layout_marginTop="15dp"
    android:layout_width="180dp"
    android:layout_height="@dimen/m_button_height"/>




    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>